wip: Add GetBookAuthors
