# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/OpenAPI/Alexandria.WebApi.json
@@ -84,6 +84,41 @@
         }
       }
     },
+    "/v1/books/bookAuthors": {
+      "get": {
+        "tags": [
+          "Books"
+        ],
+        "summary": "Get a Book and its author(s).",
+        "operationId": "GetBookAuthors",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetBookAuthorsResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/v1/authors": {
       "get": {
         "tags": [
@@ -375,6 +410,24 @@
         "properties": {
           "author": {
             "$ref": "#/components/schemas/Author"
+          }
+        }
+      },
+      "GetBookAuthorsResponse": {
+        "required": [
+          "book",
+          "authors"
+        ],
+        "type": "object",
+        "properties": {
+          "book": {
+            "$ref": "#/components/schemas/Book"
+          },
+          "authors": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Author"
+            }
           }
         }
       },
